tests/snapshots/writes__only_a_constant_update_over_every_row_sees_past_the_select_policies.snap
---
source: tests/writes.rs
expression: "report(\"update_hidden_by_select\", 1)"
---
notes
  ✓ alice  update  where tenant_id = '…000b' → deny                 affected 0 of 3 rows
  ✓ alice  update  where tenant_id = '…000b' set body = 'x' → deny  affected 0 of 3 rows
  ✗ alice  update  where true set body = 'x' → deny                 affected 6 of 6 rows (expected 0)
coverage 1/8 cells (12.5%) · 7 unspecified (ignore)
1 failed · 2 passed · 0 inconclusive
