tests/snapshots/writes__update_check_true_lets_alice_move_rows_to_the_other_tenant.snap
---
source: tests/writes.rs
expression: "report(\"update_check_true\", 1)"
---
notes
  ✓ alice  update  where tenant_id = '…000a' → allow                         affected 3 of 3 rows
  ✓ alice  update  where tenant_id = '…000b' → deny                          affected 0 of 3 rows
  ✗ alice  update  where tenant_id = '…000a' set tenant_id = '…000b' → deny  affected 3 of 3 rows (expected 0)
1 failed · 2 passed · 0 inconclusive
