tests/snapshots/writes__update_pass.snap
---
source: tests/writes.rs
expression: "report(\"update_pass\", 0)"
---
notes
  ✓ alice  update  where tenant_id = '…000a' → allow                         affected 3 of 3 rows
  ✓ alice  update  where tenant_id = '…000b' → deny                          affected 0 of 3 rows
  ✓ alice  update  where tenant_id = '…000a' set tenant_id = '…000b' → deny  permission denied
0 failed · 3 passed · 0 inconclusive
